--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,105 +1,114 @@
 .navbar {
-    display: flex;
+display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #013914;
     color: white;
-    transition: 0.5s all ease;
-    position: sticky;
+position: sticky;
     top: 0;
     z-index: 999;
+transition: 0.5s all ease;
 
-    &.active {
+&.active {
         background-color: white;
         color: black;
+button {
+        background-color: white !important;
+        color: #1dbf73 !important;
+        border: 1px solid #1dbf73 !important;
     }
+  }
 
-    .container {
-        width: 1200px;
+  .container {
+      width: 1200px;
         display: flex;
-        justify-content: space-between;
-        padding: 10px 0px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0px;
 
-        .logo {
+    .logo {
             font-size: 34px;
             font-weight: bold;
 
-            .text {}
+    .text {}
 
-            .dot {
-                color: #1dbf73;
-            }
+                                                                  .dot {
+        font-weight: bold;
+        color: #1dbf73;
         }
-
+                }
         .links {
-            display: flex;
-            gap: 24px;
-            align-items: center;
-            font-weight: 500;
-            font-family: 'Poppins', sans-serif;
+display: flex;
+    align-items: center;
+    gap: 24px;
+        font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+span {
+        white-space: nowrap;
+    }
 
-            .user {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                cursor: pointer;
-                position: relative;
-            }
+                                                                  .user {
+                                                                      display: flex;
+                                                                      align-items: center;
+                                                                      gap: 10px;
+                                                                      cursor: pointer;
+                                                                      position: relative;
 
-            img {
+        img {
                 width: 32px;
                 height: 32px;
                 border-radius: 50%;
                 object-fit: cover;
             }
 
-            .options {
-                position: absolute;
-                top: 50px;
-                right: 0;
-                padding: 20px;
-                background: white;
-                border: 1px solid lightgray;
-                border-radius: 10px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                color: gray;
-                width: 200px;
-                font-weight: 300;
+                                                                                                                                .options {
+                                                                                                                                    position: absolute;
+                                                                                                                                    top: 50px;
+                                                                                                                                    right: 0;
+                                                                                                                                    padding: 20px;
+        background-color: white;
+            border-radius: 10px;
+        z-index: 999;
+            border: 1px solid lightgrey;
+        display: flex;
+            flex-direction: column;
+            gap: 10px;
+        width: 200px;
+            font-weight: 300;
+        color: gray;
+        }
+        }
 
-            }
+                                                                  button {
+        color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: 1px solid white;
+        background-color: transparent;
+        cursor: pointer;
 
-            button {
-                color: #fff;
-                padding: 10px 20px;
-                border-radius: 5px;
-                border: 1px solid white;
-                cursor: pointer;
-                background-color: transparent;
-
-                &:hover {
-                    background-color: #1dbf73;
-                    border-color: #1dbf73;
-                }
+        &:hover {
+                background-color: #1dbf73;
+                border-color: #1dbf73;
             }
         }
-    }
+        }
+                                                                }
 
-    hr {
-        width: 100%;
+  hr {
+    width: calc(100% - 2px);
         height: 0;
-        border: 0.5px solid rgb(233, 228, 228);
+    border-top: 0.5px solid #ebe9e9;
+        border-bottom: 0.5px solid #ebe9e9;
     }
 
-    .menu {
-        width: 1200px;
+  .menu {
+      width: 1200px;
         padding: 10px 0px;
         display: flex;
         justify-content: space-between;
-        font-weight: 300;
-        color: gray;
-        font-family: 'Poppins', sans-serif;
-
+    color: gray;
+    font-weight: 300;
+    font-family: "Montserrat", sans-serif;
     }
 }
