--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,106 +1,18 @@
- .home {
-     .features {
-         background-color: #f1fdf7;
-         display: flex;
-         justify-content: center;
-         padding: 100px 0px;
+.items {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+        flex-wrap: wrap;
 
-
-         &.dark {
-             background-color: #0d084d;
-             color: white;
-
-             h1 {
-                 color: white !important;
-
-             }
-
-             i {
-                 font-weight: 300;
-             }
-
-             p {
-                 color: white !important;
-                 margin-bottom: 40px !important;
-             }
-
-             .title {
-                 color: white !important;
-                 font-weight: 300 !important;
-                 font-size: 18px !important;
-
-             }
-
-             button {
-                 background-color: #1dbf73;
-                 border: none;
-                 color: white;
-                 padding: 10px 20px;
-                 border-radius: 5px;
-                 width: max-content;
-                 font-size: 16px;
-                 cursor: pointer;
-                 margin-top: 20px;
-             }
-         }
-
-         .container {
-             width: 1200px;
-             display: flex;
-             align-items: center;
-             gap: 100px;
-
-             .item {
-                 display: flex;
-                 flex-direction: column;
-                 gap: 15px;
-                 font-weight: 300;
-
-                 &:first-child {
-                     flex: 2;
-                 }
-
-                 &:last-child {
-                     flex: 3;
-                 }
-
-                 img {
-                     width: 100%;
-                 }
-
-                 h1 {
-                     font-weight: 400;
-                     margin-bottom: 10px;
-                 }
-
-                 .title {
-                     display: flex;
-                     align-items: center;
-                     gap: 10px;
-                     font-weight: 500;
-                     font-size: 18px;
-                     color: #666;
-                     margin-top: -10px;
-
-                     img {
-                         width: 24px;
-                         height: 24px;
-                     }
-                 }
-
-                 p {
-                     font-size: 18px;
-                     font-weight: 300;
-                     color: gray;
-                     line-height: 28px;
-                     letter-spacing: 1px;
-                     margin-top: -10px;
-                 }
-
-                 video {
-                     width: 720px;
-                 }
-             }
-         }
-     }
- }
+    .item {
+    width: 250px;
+        height: 150px;
+    display: flex;
+        flex-direction: column;
+    gap: 10px;
+        align-items: center;
+    justify-content: center;
+        text-align: center;
+        cursor: pointer;
+    }
+    }
